# skillgate

./: CHANGELOG.md  README-PYPI.md  README.md  SECURITY.md  public-ce-manifest-2026-02-21.json  pyproject.toml
.github/workflows/: ci.yml  npm-shim-release.yml
docs/: GO-TO-MARKET-SEO.md  install-spec.json
docs/open-core/: PUBLIC_PRIVATE_MATRIX_v1.md  ci-parity-matrix.json  deployment-profile-lock.json  dual-repo-release-contract.json  public-export-policy.json
docs/phase2/artifacts/: phase2-ship-gate-audit-2026-02-28.json
docs/section-16-open-core-split-governance/artifacts/: dual-repo-release-contract-validation.json
dotnet-shim/: README.md
dotnet-shim/SkillGate.Client/: README.md  SkillGate.Client.csproj  SkillGateClient.cs
dotnet-shim/SkillGate.Client.Tests/: SkillGate.Client.Tests.csproj  SkillGateClientTests.cs
go-shim/: README.md  go.mod  skillgate.go  skillgate_test.go
java-shim/: pom.xml
npm-shim/: README.md  package.json
ruby-shim/: skillgate.gemspec
ruby-shim/lib/: skillgate.rb
ruby-shim/lib/skillgate/: client.rb  errors.rb  models.rb
ruby-shim/test/: test_client.rb
rust-shim/: Cargo.toml
rust-shim/src/: lib.rs
scripts/install/: install.ps1  install.sh  skillgate.rb
scripts/quality/: check_claim_ledger.py  check_deployment_profile_lock.py  check_dual_repo_release_contract.py  check_governance_scope_gate.py  check_install_docs_freshness.py  check_phase2_ship_gates.py  check_phase_ship_gates.py  check_split_ci_parity.py  check_wrapper_enforcement.py  generate_release_manifest.py  generate_reliability_scorecard.py  recall_report.py  run_local_ci_gate.py  verify_release_manifest.py
scripts/release/: check_public_export.py
scripts/test/: upgrade_user.sql
skillgate/: version.py
skillgate/api/: auth_context.py  models.py
skillgate/api/migrations/: 0001_initial.sql
skillgate/api/routes/: payments.py  scans.py  teams.py
skillgate/ci/: __init__.py  noise.py
skillgate/ci/bitbucket/: template.yml
skillgate/ci/github/: __init__.py  action.yml  annotations.py
skillgate/ci/gitlab/: __init__.py  template.yml
skillgate/cli/: __init__.py  app.py  branding.py  main.py  remote.py  scan_submit.py
skillgate/cli/commands/: approval.py  auth.py  bom.py  claude.py  codex.py  dag.py  doctor.py  drift.py  export.py  gateway.py  hooks.py  hunt.py  init.py  integrate.py  keys.py  mcp.py  report.py  reputation.py  retroscan.py  rules_cmd.py  run.py  scan.py  sidecar.py  simulate.py  submit_scan.py  verify.py
skillgate/cli/formatters/: __init__.py  human.py  json_fmt.py  sarif.py
skillgate/core/models/: __init__.py  artifact.py  bundle.py  enums.py  finding.py  report.py
skillgate/core/signer/: __init__.py  canonical.py  engine.py  keys.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
vscode-extension/src/: approvalCenterPanel.ts  capabilityDiff.ts  debounce.ts  extension.ts  instructionWarnings.ts  onboardingPanel.ts  policyLint.ts  prChecklist.ts  riskHints.ts  simulationPanel.ts  skillgateClient.ts  types.ts
vscode-extension/tests/: test_capability_diff.ts  test_extension_scaffold.ts  test_instruction_warnings.ts  test_performance.ts  test_policy_linting.ts  test_pr_checklist.ts  test_simulation_panel.ts  test_skillgate_client.ts
web-ui/: .env.example  .eslintrc.json  .gitignore  .pa11yci.json  lighthouserc.json  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ts
web-ui/docs/: DEMO-EVIDENCE-VIDEO.md  README.md
web-ui/e2e/: a11y.spec.ts  docs.spec.ts  marketing.spec.ts  pricing-a11y-hardening.spec.ts  pricing-analytics.spec.ts  pricing-hardening.spec.ts
web-ui/public/: manifest.json
web-ui/scripts/: check-api-docs-sync.mjs  check-doc-links.mjs  check-doc-snippets.mjs  check-docs-health.mjs  generate-api-docs.mjs  lint-markdown.mjs  run-pa11y.sh
web-ui/src/: middleware.ts
web-ui/src/__tests__/: analytics.test.ts  api-client.test.ts  auth-contract.test.ts  pricing-experiment.test.ts  pricing.test.ts  seo.test.ts
web-ui/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web-ui/src/app/about/: page.tsx
web-ui/src/app/cancel/: page.tsx
web-ui/src/app/contact/: page.tsx
web-ui/src/app/dashboard/: layout.tsx  page.tsx
web-ui/src/app/dashboard/api-keys/: page.tsx
web-ui/src/app/dashboard/billing/: page.tsx
web-ui/src/app/docs/: layout.tsx  page.tsx
web-ui/src/app/docs/api/: page.tsx
web-ui/src/app/features/: page.tsx
web-ui/src/app/login/: page.tsx
web-ui/src/app/og/: route.tsx
web-ui/src/app/pricing/: page.tsx
web-ui/src/app/privacy/: page.tsx
web-ui/src/app/roadmap/: page.tsx
web-ui/src/app/signup/: page.tsx
web-ui/src/app/success/: page.tsx
web-ui/src/app/terms/: page.tsx
web-ui/src/app/verify-email/: page.tsx
web-ui/src/components/auth/: LoginForm.tsx  SignupForm.tsx  VerifyEmailPanel.tsx
web-ui/src/components/dashboard/: Card.tsx  DashboardShell.tsx  DashboardTopbar.tsx  DataTable.tsx  EmptyState.tsx  InviteLinkCard.tsx  PageHeader.tsx  Sidebar.tsx  StatCard.tsx  TierGate.tsx
web-ui/src/components/docs/: CodeBlock.tsx  DocsPage.tsx  DocsSidebar.tsx  DocsToc.tsx  InstallWizard.test.tsx  InstallWizard.tsx  IntegrationTabs.tsx
web-ui/src/components/hero/: ThreatTear.tsx
web-ui/src/components/layout/: Footer.tsx  Header.tsx
web-ui/src/components/providers/: AnalyticsProvider.tsx  AuthProvider.tsx  ErrorBoundary.tsx  QueryProvider.tsx
web-ui/src/components/sections/: CTASection.tsx  FeaturesSection.tsx  HeroSection.tsx  PricingSection.test.tsx  PricingSection.tsx  RoadmapSection.tsx  SocialProofSection.tsx
web-ui/src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Modal.tsx  Skeleton.tsx
web-ui/src/lib/: analytics.ts  api-client.ts  auth.ts  docs-links.ts  docs-nav.ts  install-spec.ts  pricing-experiment.ts  pricing.ts  roadmap-fallback.ts  seo.ts  utils.ts
web-ui/src/lib/hooks/: use-auth-contract.ts  use-dashboard.ts
web-ui/src/lib/types/: dashboard.ts
web-ui/src/styles/: globals.css
(+39 files in other folders)
