[package]
name = "skillgate"
version = "0.1.0"
edition = "2021"
description = "Rust HTTP client for the SkillGate runtime sidecar"
license = "SEE LICENSE IN LICENSE"
repository = "https://github.com/skillgate-io/skillgate-rust"
keywords = ["security", "ai", "agent", "governance", "skillgate"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
